@@ -26,6 +26,7 @@
 #include "x/w/input_field_config.H"
 #include "x/w/date_input_field.H"
 #include "x/w/date_input_field_config.H"
+#include "x/w/image.H"
 #include "theme_parser_lock.H"
 #include "messages.H"
 #include "picture.H"
