@@ -1,3 +1,7 @@
+2019-06-07  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Create <image>s using the theme file.
+
 2019-06-06  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Create <date_input_field>s using the theme file.
